--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -49,6 +49,15 @@
 
             <!-- Contenu de la carte -->
             <div class="p-6">
+                {% if sortie.imageFilename %}
+                <!-- Image de la sortie -->
+                <div class="mb-6">
+                    <img src="{{ asset('uploads/sorties/' ~ sortie.imageFilename) }}"
+                         alt="{{ sortie.name }}"
+                         class="w-full h-64 object-cover rounded-lg shadow-md border border-gray-200 dark:border-gray-600">
+                </div>
+                {% endif %}
+
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <!-- Informations générales -->
                     <div class="space-y-6">
@@ -333,8 +342,8 @@
                     <div class="flex flex-col sm:flex-row gap-3">
                         <a href="{{ path('app_sortie_export_pdf', {id: sortie.id}) }}" target="_blank"
                            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-lg text-white bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500 shadow-md hover:shadow-lg transform hover:-translate-y-0.5 transition-all duration-200">
-                            <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M4.5 2A1.5 1.5 0 003 3.5v13A1.5 1.5 0 004.5 18h11a1.5 1.5 0 001.5-1.5V7.621a1.5 1.5 0 00-.44-1.06l-4.12-4.122A1.5 1.5 0 0011.378 2H4.5zm4.75 10.25a.75.75 0 011.5 0v2.546l.943-1.01a.75.75 0 111.114 1.004l-2.25 2.4a.75.75 0 01-1.114 0l-2.25-2.4a.75.75 0 111.114-1.004l.943 1.01v-2.546z" clip-rule="evenodd" />
+                            <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M4.5 2A1.5 1.5 0 003 3.5v13A1.5 1.5 0 004.5 18h11a1.5 1.5 0 001.5-1.5V7.621a1.5 1.5 0 00-.44-1.06l-4.12-4.122A1.5 1.5 0 0011.378 2H4.5zm4.75 10.25a.75.75 0 011.5 0v2.546l.943-1.01a.75.75 0 111.114 1.004l-2.25 2.4a.75.75 0 01-1.114 0l-2.25-2.4a.75.75 0 111.114-1.004l.943 1.01v-2.546z" clip-rule="evenodd"></path>
                             </svg>
                             Exporter en PDF
                         </a>
